added watcheservice and removed polling every 10 seconds